--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Lua-Framework"]
-	path = Lua-Framework
-	url = https://github.com/rraallvv/Lua-Framework
+[submodule "ObjC-Lua"]
+	path = ObjC-Lua
+	url = https://github.com/rraallvv/ObjC-Lua
