--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: objective-c
 before_install: sudo easy_install cpp-coveralls
 xcode_project: GameEditor.xcodeproj
 xcode_scheme: GameEditor
-xcode_sdk: macosx10.10
-after_success: coveralls
+after_success:
+  - find ~/Library/Developer/Xcode/DerivedData/ -name "*.gcno" -exec cp -v '{}' . \;
+  - find ~/Library/Developer/Xcode/DerivedData/ -name "*.gcda" -exec cp -v '{}' . \;
+  - coveralls --extension .m --include GameEditor
