--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: objective-c
-before_install: sudo easy_install cpp-coveralls
+before_install:
+  - git submodule update --init --recursive
+  - sudo easy_install cpp-coveralls
 xcode_project: GameEditor.xcodeproj
 xcode_scheme: GameEditor
 after_success:
