add test script for adding a colored sprite node

--- a/GameEditor/PlugIns/1-ColorSprite.geextension/Info.plist
+++ b/GameEditor/PlugIns/1-ColorSprite.geextension/Info.plist
@@ -8,5 +8,7 @@
 	<string>Color Sprite</string>
 	<key>Description</key>
 	<string>Create a simple sprite with color.</string>
+	<key>Script File</key>
+	<string>script.lua</string>
 </dict>
 </plist>
