enable the add light plugin

--- a/GameEditor/PlugIns/3-Light.geextension/Info.plist
+++ b/GameEditor/PlugIns/3-Light.geextension/Info.plist
@@ -8,5 +8,7 @@
 	<string>Light</string>
 	<key>Description</key>
 	<string>Create a basic light.</string>
+	<key>Script File</key>
+	<string>script.lua</string>
 </dict>
 </plist>
