enable the add shape plugin

--- a/GameEditor/PlugIns/6-ShapeNode.geextension/Info.plist
+++ b/GameEditor/PlugIns/6-ShapeNode.geextension/Info.plist
@@ -8,5 +8,7 @@
 	<string>Shape Node (Square)</string>
 	<key>Description</key>
 	<string>Create a square shape node.</string>
+	<key>Script File</key>
+	<string>script.lua</string>
 </dict>
 </plist>
