move all the remaining tools to the default plugin

--- a/GameEditor/PlugIns/Default.geextension/Info.plist
+++ b/GameEditor/PlugIns/Default.geextension/Info.plist
@@ -14,6 +14,14 @@
 		<string>Emitter</string>
 		<string>Label</string>
 		<string>Shape Node (Square)</string>
+		<string>Linear Gravity Field</string>
+		<string>Radial Gravity Field</string>
+		<string>Spring Field</string>
+		<string>Drag Field</string>
+		<string>Vortex Field</string>
+		<string>Turbulence Field</string>
+		<string>Noise Field</string>
+		<string>Velocity Field</string>
 	</array>
 	<key>Descriptions</key>
 	<array>
@@ -23,6 +31,14 @@
 		<string>Create a basic emitter.</string>
 		<string>Create a basic label.</string>
 		<string>Create a square shape node.</string>
+		<string>Create a linear gravity field.</string>
+		<string>Create a radial gravity field.</string>
+		<string>Create a spring field.</string>
+		<string>Create a drag field.</string>
+		<string>Create a vortex field.</string>
+		<string>Create a turbulence field.</string>
+		<string>Create a noise field.</string>
+		<string>Create a velocity field.</string>
 	</array>
 	<key>Script File</key>
 	<string>script.lua</string>
@@ -34,6 +50,14 @@
 		<string>Emitter.png</string>
 		<string>Label.png</string>
 		<string>ShapeNode.png</string>
+		<string>LinearGravityField.png</string>
+		<string>RadialGravityField.png</string>
+		<string>SpringField.png</string>
+		<string>DragField.png</string>
+		<string>VortexField.png</string>
+		<string>TurbulenceField.png</string>
+		<string>NoiseField.png</string>
+		<string>VelocityField.png</string>
 	</array>
 </dict>
 </plist>
